[package]
name = "gdtree"
version = "0.1.2"
edition = "2021"
authors = ["Ian Young <ian@duffrecords.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
indexmap = "1.9"
regex = "1"
