[package]
name = "gdtree"
version = "0.1.3"
edition = "2024"
authors = ["Ian Young <ian@duffrecords.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
indexmap = "2.12"
regex = "1"
